// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for enhancement template: enhancement-template 1`] = `
"# Enhancement

## Your Task
The user wants to add or change functionality on their web page. Review the context below and implement the requested enhancement.

## What the User Wants
> Add a dark mode toggle button to the header

## Context
**Page URL:** \`https://example.com/dashboard\`

## Target Element(s)

The user selected the following element(s) as the focus of their request. Use these element(s) as reference for where to apply the enhancement. You may need to modify these elements, their parents, or add sibling elements.


### Element 1

\`\`\`html
<header class="site-header">
<nav>...</nav>
</header>
\`\`\`

**CSS Selector:** \`header.site-header\`







## Summary

**Type:** Enhancement

**Suggested approach:**
1. Locate the target element in the codebase using the CSS selector
2. Understand the current behavior and surrounding code
3. Implement the requested enhancement
4. Test that existing functionality is not broken
"
`;

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for fix template with React source: fix-template-with-react-source 1`] = `
"# Bug Fix

## Your Task
The user has identified a bug that needs fixing. Review the context below, identify the root cause, and implement a fix.

## What the User Wants
> The LoginButton component does not trigger onClick

## Context
**Page URL:** \`https://example.com/login\`

## Target Element(s)

The user selected the following element(s) as the focus of their request. These element(s) may be the source of the bug, or closely related to it. Inspect their attributes, event handlers, and parent/child relationships.


### Element 1

\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`


**React Component:** \`LoginButton\` at \`src/components/LoginButton.tsx:42:8\`

**Component Stack:**
  → App
  → Layout
  → Header
  → LoginForm
  → LoginButton



## Console Errors

**1 error(s) detected.** These may indicate the root cause of the issue:

### Error
\`\`\`
Uncaught TypeError: Cannot read property 'click' of undefined
\`\`\`

**Stack trace:**
\`\`\`
at handleClick (app.js:42:15)
    at HTMLButtonElement.<anonymous> (app.js:50:10)
\`\`\`
**Source:** \`https://example.com/app.js:42\`



## Failed Network Requests

**1 failed request(s).** These may indicate API issues, missing resources, or server errors:

| Status | Method | URL |
|--------|--------|-----|
| 500 | POST | \`https://api.example.com/auth/login\` |


## Summary

**Type:** Bug Fix

**Suggested approach:**
1. Review the error messages and stack traces for clues
2. Locate the target element and related code
3. Identify the root cause of the issue
4. Implement and test the fix
"
`;

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for fix template with multiple elements: fix-template-multiple-elements-mixed-react 1`] = `
"# Bug Fix

## Your Task
The user has identified a bug that needs fixing. Review the context below, identify the root cause, and implement a fix.

## What the User Wants
> Form submission not working

## Context
**Page URL:** \`https://example.com/signup\`

## Target Element(s)

The user selected the following element(s) as the focus of their request. These element(s) may be the source of the bug, or closely related to it. Inspect their attributes, event handlers, and parent/child relationships.


### Element 1

\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

**CSS Selector:** \`#email\`


**React Component:** \`EmailInput\` at \`src/components/forms/EmailInput.tsx:23:4\`

**Component Stack:**
  → App
  → Form
  → EmailInput


### Element 2

\`\`\`html
<input type="password" id="password" class="form-input" />
\`\`\`

**CSS Selector:** \`#password\`



### Element 3

\`\`\`html
<button type="submit" class="submit-btn">Submit</button>
\`\`\`

**CSS Selector:** \`button.submit-btn\`


**React Component:** \`SubmitButton\` at \`src/components/forms/SubmitButton.tsx:15:8\`

**Component Stack:**
  → App
  → Form
  → SubmitButton






## Summary

**Type:** Bug Fix

**Suggested approach:**
1. Review the error messages and stack traces for clues
2. Locate the target element and related code
3. Identify the root cause of the issue
4. Implement and test the fix
"
`;

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for fix template without React source: fix-template-without-react-source 1`] = `
"# Bug Fix

## Your Task
The user has identified a bug that needs fixing. Review the context below, identify the root cause, and implement a fix.

## What the User Wants
> The login button does not respond when clicked

## Context
**Page URL:** \`https://example.com/login\`

## Target Element(s)

The user selected the following element(s) as the focus of their request. These element(s) may be the source of the bug, or closely related to it. Inspect their attributes, event handlers, and parent/child relationships.


### Element 1

\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`







## Summary

**Type:** Bug Fix

**Suggested approach:**
1. Review the error messages and stack traces for clues
2. Locate the target element and related code
3. Identify the root cause of the issue
4. Implement and test the fix
"
`;

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for quick select multiple elements: quick-select-multiple-elements 1`] = `
"
## Element 1

\`\`\`html
<input type="text" id="username" placeholder="Username" />
\`\`\`

**CSS Selector:** \`#username\`


**React Component:** \`UsernameInput\` at \`src/components/forms/UsernameInput.tsx:12:4\`

**Component Stack:**
  → App
  → LoginForm
  → UsernameInput


## Element 2

\`\`\`html
<input type="password" id="password" placeholder="Password" />
\`\`\`

**CSS Selector:** \`#password\`


**React Component:** \`PasswordInput\` at \`src/components/forms/PasswordInput.tsx:18:4\`

**Component Stack:**
  → App
  → LoginForm
  → PasswordInput


## Element 3

\`\`\`html
<button type="submit" class="login-btn">Log In</button>
\`\`\`

**CSS Selector:** \`button.login-btn\`


**React Component:** \`LoginButton\` at \`src/components/forms/LoginButton.tsx:33:8\`

**Component Stack:**
  → App
  → LoginForm
  → LoginButton


"
`;

exports[`Default Templates v1.1.8 Snapshot Tests should match snapshot for quick select single element: quick-select-single-element 1`] = `
"
## Element 1

\`\`\`html
<button id="submit-btn" class="btn primary">Submit</button>
\`\`\`

**CSS Selector:** \`#submit-btn\`


**React Component:** \`SubmitButton\` at \`src/components/SubmitButton.tsx:28:6\`

**Component Stack:**
  → App
  → Form
  → SubmitButton


"
`;
